fix: logo not showing on mobile

--- a/_sass/jekyll-theme-minimalist.scss
+++ b/_sass/jekyll-theme-minimalist.scss
@@ -259,10 +259,6 @@ footer {
   .link-wrapper {
     display: none !important;
   }
-
-  .img-circle {
-    display: none !important;
-  }
 }
 
 @media print, screen and (max-width: 720px) {
